# astranis_simulator

./: CMakeLists.txt  README.md
config/: many_sims.json  single_sim.json
include/astranis_simulator/: common.h  controller.h  observer.h  simulator.h  system.h
scripts/: plot_data.py  plot_many_data.py  plot_single_data.py
scripts/data/: output1_example.csv  output2_example.csv  output3_example.csv
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  run_many_sims.cpp  run_sim.cpp  run_single_sim.cpp
src/libs/: CMakeLists.txt  controller.cpp  observer.cpp  simulator.cpp  system.cpp
tests/: CMakeLists.txt  test_controller.cpp  test_observer.cpp  test_simulator.cpp  test_system.cpp
